--- a/src/app/management/management.component.css
+++ b/src/app/management/management.component.css
@@ -10,15 +10,21 @@
   font-weight: bold;
   color: #333;
   margin-bottom: 0.5rem;
+  width: 100%;
+  padding-left: 40px;
 }
 
 .cart-weekday-cards {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: rem;
 }
 
 .cart-day {
+  display: flex;
+}
+
+.cart-day-list {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -26,15 +32,16 @@
 
 .cart-time {
   display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
+  flex-direction: row;
+  gap: 1rem;
 }
 
-.cart-day .cart-group {
+.cart-group {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 0.5rem;
   flex-wrap: wrap;
+  margin: 5px;
 }
 
 .cart-break {
@@ -55,10 +62,13 @@ button {
   color: #fff;
   border: none;
   border-radius: 4px;
-  padding: 8px 16px;
+  padding: 8px 8px;
   cursor: pointer;
   font-size: 1rem;
   transition: background-color 0.3s ease;
+  text-align: center;
+  line-height: 10px;
+  float: right;
 }
 
 button:hover {
